--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,62 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
+  <groupId>eu.fussy4j</groupId>
+  <artifactId>fussy4j</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
+  <name>fussy4j</name>
+  <url>https://github.com/octavian-nita/fussy4j</url>
+  <description>Fuzzy (String) Searching / Approximate (String) Matching for Java</description>
+
+  <issueManagement>
+    <url>https://github.com/octavian-nita/fussy4j/issues</url>
+    <system>fussy4j Issues on GitHub</system>
+  </issueManagement>
+
+  <scm>
+    <url>https://github.com/octavian-nita/fussy4j</url>
+    <connection>scm:git:git://github.com/octavian-nita/fussy4j.git</connection>
+    <developerConnection>scm:git:git@github.com:octavian-nita/fussy4j.git</developerConnection>
+  </scm>
+
+  <developers>
+    <developer>
+      <email>octavian.nita@gmail.com</email>
+      <name>Octavian Nita</name>
+      <url>https://github.com/octavian-nita</url>
+      <id>octavian-nita</id>
+    </developer>
+  </developers>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+</project>
